# frl-v2

./: .gitattributes  .gitignore  CITATION.cff  DATA_DICTIONARY.md  DATA_LICENSE.md  LICENSE  README.md  analyze_resilience.py  analyze_results.py  build_publication.py  checksums.sha256  package_manifest.json  plot_results.py  prepare_anchors.py  pyproject.toml  reproduce.py  requirements-lock.txt  run_pipeline.py  run_resilience.py
anchors/: parameter_anchors.json  source_manifest.json
configs/: design.json  model.json  resilience_design.json
data/: README.md
derived-resilience-primary-v1/: mechanism_validation.json  precision_decision.json  resilience_contrasts.csv  results_manifest.json
derived-resilience-sensitivity-budget-v2/: results_manifest.json  sensitivity_cells.csv  sensitivity_contrasts.csv
derived-resilience-sensitivity-cash-v1/: results_manifest.json  sensitivity_cells.csv  sensitivity_contrasts.csv
derived-resilience-sensitivity-frequency-v1/: results_manifest.json  sensitivity_cells.csv  sensitivity_contrasts.csv
derived-resilience-sensitivity-high-impact-v1/: results_manifest.json  sensitivity_cells.csv  sensitivity_contrasts.csv
design/: design_lock_manifest.json  formal_seed_manifest.json  locked_design.json  pilot_results.csv
figures/: README.md  figure_manifest.json
frl_v2/: __init__.py  analysis.py  config.py  design_lock.py  experiment.py  io_utils.py  model.py  pilot.py  rng.py
frl_v3/: __init__.py  analysis.py  config.py  design_lock.py  experiment.py  io_utils.py  model.py  pilot.py  resilience_analysis.py  resilience_lock.py  (+2 more)
(+88 files in other folders)
