[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "frl-finance-survival-model"
version = "2.0.0"
description = "Deterministic agent-based liquidity and market-risk survival model"
requires-python = ">=3.12,<3.14"
dependencies = [
  "matplotlib==3.10.6",
  "numpy==2.3.5",
  "pandas==2.3.3",
  "scipy==1.16.3",
  "statsmodels==0.14.5"
]

[tool.setuptools]
packages = ["frl_v2"]
