[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "frl-funding-fire-sale-model"
version = "3.1.0"
description = "Deterministic agent-based funding-withdrawal and fire-sale stress model"
requires-python = ">=3.12,<3.14"
dependencies = [
  "matplotlib==3.10.6",
  "numpy==2.3.5",
  "pandas==2.3.3",
  "scipy==1.16.3"
]

[tool.setuptools]
packages = ["frl_v3"]
